...
    <string formatted="false" name="redo">Redo</string>
    <string formatted="false" name="undo">Undo</string>

    <string formatted="false" name="new_option">new…</string>
    <string formatted="false" name="edit_option">edit…</string>

    <string formatted="false" name="confirm">Confirm</string>
    <string formatted="false" name="ignore">Ignore</string>
    <string formatted="false" name="cancel">Cancel</string>
    <string formatted="false" name="save">Save</string>
    <string formatted="false" name="help">Help</string>

    <string formatted="false" name="discard">Discard</string>

    <string formatted="false" name="next">Next</string>

    <string formatted="false" name="ok">OK</string>
    <string formatted="false" name="done">Done</string>
    <string formatted="false" name="close">Close</string>

    <string formatted="false" name= "assistant">Assistant</string>

    <string formatted="false" name="yes">Yes</string>
...
    <string formatted="false" name="name_already_exists">This name is already in use, please choose another one.</string>
    <string formatted="false" name="name_consists_of_spaces_only">You only put spaces into the text field, please enter a text
        using letters, numbers or other special characters.</string>
    <string formatted="false" name="name_empty">Please enter a text</string>

    <!-- Recycler View -->
    <string formatted="false" name="am_empty_list">There are no items in this list yet. Please add some first.</string>
    <string formatted="false" name="reject_import">The actor or object could not be added.</string>
    <string formatted="false" name="am_merge_error">No merging is done. Exactly 2 projects need to be selected to merge.</string>
    <string formatted="false" name="am_backpack">Pack</string>
    <string formatted="false" name="am_unpack">Unpack</string>
    <string formatted="false" name="am_copy">Copy</string>
    <string formatted="false" name="am_delete">Delete</string>
...
    <string formatted="false" name="am_merge">Merge</string>
    <string formatted="false" name="dialog_confirm_delete">You can\'t undo this!</string>

    <string formatted="false" name="list_headline_sprites">Actors and objects</string>

    <!-- Options Menu Options -->
    <string formatted="false" name="backpack">Backpack</string>
    <string formatted="false" name="copy">Copy</string>
    <string formatted="false" name="delete">Delete</string>
    <string formatted="false" name="rename">Rename</string>
    <string formatted="false" name="merge">Merge</string>
    <string formatted="false" name="show_details">Show details</string>
    <string formatted="false" name="hide_details">Hide details</string>
    <string formatted="false" name="project_options">Project options</string>
    <string formatted="false" name="from_local">Add from local</string>
    <string formatted="false" name="sort_projects">Sort</string>
...
    <string formatted="false" name="import_conflicting_variables_try_again">Please rename one of these variables or lists and try again.</string>
    <!-- Details -->
    <string formatted="false" name="project_details">Last access: %s, size: %s</string>
    <string formatted="false" name="last_access_today">today, %s</string>
    <string formatted="false" name="scene_details">Actors and objects: %d, looks: %d, sounds: %d</string>
    <string formatted="false" name="sprite_details">Bricks: %d, looks: %d, sounds: %d</string>
    <string formatted="false" name="look_details">Resolution: %s, size: %s</string>
    <string formatted="false" name="sound_duration">Duration: %s</string>
    <string formatted="false" name="sound_details">Duration: %s, size: %s</string>
    <!--  -->

    <!-- Rename Dialog Titles -->
    <string formatted="false" name="rename_project">Rename project</string>
    <string formatted="false" name="rename_scene_dialog">Rename scene</string>
    <string formatted="false" name="rename_sprite_dialog">Rename actor or object</string>
    <string formatted="false" name="rename_look_dialog">Rename look</string>
    <string formatted="false" name="rename_sound_dialog">Rename sound</string>
    <string formatted="false" name="rename_nfctag_dialog">Rename NFC tag</string>
    <string formatted="false" name="rename_data_dialog">Rename</string>

    <!-- New Script Group Dialog -->
...

    <!-- ScriptListFragment -->
    <string formatted="false" name="fragment_script_text_description">Tap \"+\" to add scripts</string>
    <!--  -->

    <!-- SpriteListFragment -->
    <string formatted="false" name="fragment_sprite_text_description">Tap \"+\" to add actors or objects</string>
    <string formatted="false" name="default_sprite_name">My actor or object</string>
    <!--  -->

    <!-- LookListFragment -->
    <string formatted="false" name="fragment_look_text_description">Tap \"+\" to add looks</string>
    <string formatted="false" name="select_look_from_gallery">Select image</string>
...
        on connected multiplayer devices</string>


    <!-- Backpack -->
    <string formatted="false" name="backpack_title">Your backpack</string>
    <string formatted="false" name="actor_object_title">Actors and Objects</string>
    <string formatted="false" name="pack">Pack</string>
    <string formatted="false" name="unpack">Unpack</string>
    <!--  -->

    <!-- NewProjectDialog -->
    <string name="new_project_title">Create project</string>
    <string formatted="false" name="new_project_dialog_example_project">Example project</string>
...
    <string formatted="false" name="open_cuica">open cuica</string>
    <!--  -->

    <!-- Default Values -->
    <string formatted="false" name="default_project_name">My project</string>
    <string formatted="false" name="default_variable_name">Variable</string>
    <string formatted="false" name="default_scene_name">Scene</string>
    <string formatted="false" name="default_script_group_name">Script group</string>
    <string formatted="false" name="default_broadcast_message_name">Message</string>
    <string formatted="false" name="default_list_name">List</string>
    <string formatted="false" name="default_project_background_name">Background</string>
    <string formatted="false" name="default_project_cloud_name">Clouds</string>
    <string formatted="false" name="default_project_cloud_sprite_name_1">Clouds1</string>
...
